--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,7 @@ node_modules/
 # Build outputs
 dist/
 build/
-out/
-.next/
-.nuxt/
-.output/
+*.tsbuildinfo
 
 # Environment files
 .env
@@ -19,26 +16,25 @@ out/
 logs/
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage
+# Coverage & Test results
 coverage/
 .nyc_output/
+test-results/
+playwright-report/
+playwright/.cache/
 
 # Cache
 .cache/
-.parcel-cache/
 .eslintcache
-.stylelintcache
-*.tsbuildinfo
+.turbo/
+
+# SQLite databases
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
 
 # IDE
 .idea/
@@ -49,27 +45,8 @@ coverage/
 
 # macOS
 .DS_Store
-.AppleDouble
-.LSOverride
 ._*
-.Spotlight-V100
-.Trashes
-.fseventsd
-.TemporaryItems
 
-# Thumbnails
+# Windows
 Thumbs.db
 ehthumbs.db
-
-# Optional npm cache
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Yarn
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
