Add backend core: database, terminal manager, WebSocket, and API routes
- SQLite database with better-sqlite3 and WAL mode
- Database schema for instances, sessions, messages, status_events, preferences
- Migration and reset scripts
- TerminalManager service using node-pty for pseudo-terminal management
- WebSocket service for real-time terminal I/O streaming
- REST API routes for instances, sessions, and status events
- Graceful shutdown handling
- pnpm native module build permissions (.npmrc)
- Shared types for Session, Message, and StatusEvent

--- a/package.json
+++ b/package.json
@@ -40,5 +40,12 @@
     "node": ">=20.0.0",
     "pnpm": ">=9.0.0"
   },
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.13.1",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3",
+      "esbuild",
+      "node-pty"
+    ]
+  }
 }
