--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,11 +23,13 @@
     "better-sqlite3": "^11.7.0",
     "fastify": "^5.2.1",
     "node-pty": "^1.0.0",
+    "ws": "^8.18.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^22.10.2",
+    "@types/ws": "^8.18.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
