Add Plans Editor (Milestone 8)
Implement a WYSIWYG markdown editor panel for managing plans in focus mode:

Backend:
- Add plans routes for CRUD operations on markdown files
- Auto-discover plans from {workingDir}/plans/ directory
- Support for .md and .mdx files

Frontend:
- Add PlansPanel component with file browser and MDX Editor
- Toggle panel with button or ⌘E in focus mode
- File browser with create/delete operations
- Dirty state indicator for unsaved changes
- Inject plan content to terminal feature
- Update InstanceTerminal with forwardRef for terminal input

State:
- Add plansPanelOpen, selectedPlanId to app store
- Add togglePlansPanel action and selectors

UI:
- Dark theme styles for MDX Editor
- Panel replaces thumbnail sidebar when open
- ⌘E shortcut documented in ShortcutsModal

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@cc-orchestrator/shared": "workspace:*",
+    "@mdxeditor/editor": "^3.52.1",
     "@tanstack/react-query": "^5.62.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
