Add Claude Code Orchestrator MVP
Full-stack web application for managing multiple Claude Code terminal instances.

Features:
- Real xterm.js terminals via node-pty and WebSocket
- Instance management with card/list views and drag-drop reordering
- Session history watcher that imports from ~/.claude/projects/
- Plans panel for browsing/editing markdown files
- Claude Code hook integration for status updates
- Settings persistence with SQLite
- Keyboard shortcuts (⌘B sidebar, ⌘E plans, ⌘/ shortcuts, ⌘, settings)
- Dark/light theme support

Stack:
- Frontend: React, Vite, Tailwind, xterm.js, Zustand
- Backend: Express, node-pty, better-sqlite3, WebSocket
- Shared: TypeScript types package

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,15 @@ ehthumbs.db
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# SQLite database
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
+
+# Backups
+backups/
+
+# Keep the data directory structure
+!server/data/.gitkeep
