Add real Claude Code integration tests
- Add claude-integration.spec.ts for testing with actual Claude CLI
- Tests are skipped by default (require TEST_CLAUDE_INTEGRATION=1)
- Add `make test-e2e-claude` command
- Add npm script `test:e2e:claude`
- Tests verify: idle → working → awaiting → idle status cycle

Prerequisites for running:
- Claude CLI installed
- Hooks installed (`make hooks-install`)
- API key configured

--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "test": "vitest run",
     "test:unit": "vitest run",
     "test:watch": "vitest",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "test:e2e:claude": "TEST_CLAUDE_INTEGRATION=1 playwright test --grep 'Claude Integration'"
   },
   "dependencies": {
     "@cc-orchestrator/shared": "*",
