--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: E2E Tests
+name: CI
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  e2e-tests:
+  build-and-test:
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
@@ -24,8 +24,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build shared package
-        run: npm run build --workspace=shared
+      - name: Lint
+        run: npm run lint
+
+      - name: Build all packages (type check)
+        run: npm run build
 
       - name: Install Playwright browsers
         run: npx playwright install chromium --with-deps
