--- a/.gitignore
+++ b/.gitignore
@@ -86,4 +86,4 @@ backups/
 # Keep the data directory structure
 !server/data/.gitkeep
 client/playwright-report/
-client/test-results/
+test-results/
