feat: Add knip for unused dependency and dead code detection
- Install knip as dev dependency
- Create knip.json configuration for monorepo
- Add npm run knip script
- Add make knip target
- Add knip check to CI workflow (runs after lint, before build)
- Configure knip to handle ESLint plugins and intentional exports

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Lint
         run: npm run lint
 
+      - name: Check for unused dependencies and files (Knip)
+        run: npm run knip
+
       - name: Build all packages (type check)
         run: npm run build
 
