Add E2E tests for Notes panel and coverage summary tool
- Fix NotesPanel bugs: use note.id instead of note.path for API calls
- Add 5 E2E tests for Notes panel functionality
- Add E2E coverage summary script (npm run test:e2e:summary)
- Add tsx as dev dependency for coverage script

--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "test:unit": "vitest run",
     "test:watch": "vitest",
     "test:e2e": "playwright test",
-    "test:e2e:claude": "TEST_CLAUDE_INTEGRATION=1 playwright test --grep 'Claude Integration'"
+    "test:e2e:claude": "TEST_CLAUDE_INTEGRATION=1 playwright test --grep 'Claude Integration'",
+    "test:e2e:summary": "npx tsx e2e/coverage-summary.ts"
   },
   "dependencies": {
     "@cc-orchestrator/shared": "*",
@@ -42,6 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
     "vitest": "^1.1.0",
