--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@cc-orchestrator/shared": "*",
+    "@mdxeditor/editor": "^3.52.2",
     "@tanstack/react-query": "^5.13.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
