--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,16 @@ name: CI
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - 'README.md'
+      - 'plans/**/*.md'
+      - 'notes/**/*.md'
   pull_request:
     branches: [main]
+    paths-ignore:
+      - 'README.md'
+      - 'plans/**/*.md'
+      - 'notes/**/*.md'
 
 jobs:
   # Fast checks run in parallel
