feat: Add YAML configuration file support
Add ability to configure host, server port, and client port via YAML config file.
Uses runtime config fetch instead of build-time injection to avoid test breakage.

- Server loads config from config.yaml or .config.yaml
- Server exposes /api/config endpoint for client
- Client fetches config at startup before rendering
- Vite reads YAML for proxy configuration only
- Env vars override YAML, YAML overrides defaults

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ out/
 .env.local
 .env.*.local
 
+# Config files (use config.example.yaml as template)
+config.yaml
+.config.yaml
+
 # Logs
 logs/
 *.log
