--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.2",
     "node-pty": "^1.0.0",
     "uuid": "^9.0.1",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.12",
