feat: Rebrand to Yojimbo + app improvements
1. Rebrand app to "Yojimbo" (用心棒)
   - Update package.json, HTML title, header, welcome banner
   - Update localStorage keys for stores
   - Update README with new branding

2. Add version display in Settings modal
   - Read version from package.json at build time via Vite define
   - Display version in modal footer

3. Add database reset option in Settings
   - POST /api/settings/reset-database endpoint
   - Confirmation requires typing "RESET"
   - Clears all instances, sessions, messages, settings

4. Restore instances to last-visited directory on restart
   - Add last_cwd column to instances table (with migration)
   - Save last_cwd when CWD changes (debounced 5s)
   - Respawn PTY to last_cwd instead of original working_dir

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cc-hard-core",
+  "name": "yojimbo",
   "version": "0.1.0",
   "private": true,
-  "description": "Claude Code Orchestrator - Manage multiple Claude Code terminal instances",
+  "description": "Yojimbo - Manage multiple Claude Code terminal instances",
   "workspaces": [
     "client",
     "server",
