feat: Add GitHub release workflow
- Trigger on tag push (v*.*.*) or manual dispatch
- Validates CI checks before releasing
- Generates changelog from commit messages
- Creates GitHub Release with auto-generated notes
- Add workflow_call to CI for reusable workflow support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ on:
       - 'README.md'
       - 'plans/**/*.md'
       - 'notes/**/*.md'
+  workflow_call:
 
 jobs:
   # Fast checks run in parallel
