feat: Add work summary feature with SSE streaming
- Add Summary dropdown in header for daily/weekly work summaries
- Use Claude CLI to generate AI summaries from GitHub data
- Implement SSE streaming to show commands as they execute
- Add collapsible "Commands Executed" section in modal
- Render summaries with MDXEditor for rich markdown display
- Add Work Summaries settings: data sources, custom prompt
- Include "View default prompt" toggle in settings
- Add E2E tests for summary feature (15 tests)
- Fix Vitest config to exclude Playwright E2E tests

--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "test": "vitest run",
-    "test:unit": "vitest run",
+    "test": "vitest run --passWithNoTests",
+    "test:unit": "vitest run --passWithNoTests",
     "test:watch": "vitest",
     "test:e2e": "playwright test",
     "test:e2e:claude": "TEST_CLAUDE_INTEGRATION=1 playwright test --grep 'Claude Integration'",
