--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "test": "vitest run --passWithNoTests",
-    "test:unit": "vitest run --passWithNoTests",
+    "test": "vitest run --config vitest.config.ts",
+    "test:unit": "vitest run --config vitest.config.ts",
     "test:watch": "vitest",
     "test:e2e": "playwright test",
     "test:e2e:claude": "TEST_CLAUDE_INTEGRATION=1 playwright test --grep 'Claude Integration'",
@@ -33,6 +33,8 @@
   "devDependencies": {
     "@playwright/test": "^1.40.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/uuid": "^9.0.8",
@@ -44,6 +46,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^27.4.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "tsx": "^4.21.0",
