--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-pty": "^1.0.0",
+    "ssh2": "^1.17.0",
     "uuid": "^9.0.1",
     "ws": "^8.14.2",
     "yaml": "^2.8.2"
@@ -32,6 +33,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "@types/ssh2": "^1.15.5",
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
