--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "overrides": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
+  },
   "dependencies": {
     "node-pty": "^1.1.0"
   }
