--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "node-pty": "^1.0.0",
+    "node-pty": "1.0.0",
     "ssh2": "^1.17.0",
     "uuid": "^13.0.0",
     "ws": "^8.14.2",
