chore: Major dependency upgrades (#85)
* chore: Major dependency upgrades

- React 18 → 19 (update JSX types, useRef signatures)
- Vite 5 → 7, Vitest 1 → 4 (fix mock hoisting for Vitest 4)
- Express 4 → 5
- zustand 4 → 5
- react-router-dom 6 → 7
- xterm 5 → 6
- better-sqlite3 11 → 12
- chokidar 3 → 5 (update FSWatcher types)
- dotenv 16 → 17
- uuid 9 → 13 (remove @types/uuid)
- concurrently 8 → 9
- tailwind-merge 2 → 3

All 219 tests passing.

* fix: Use async import for events module in SSH mock

* fix: Add npm overrides to unify React version at 19.2.3

Use npm overrides to force all transitive dependencies
(especially @mdxeditor/editor and its subdependencies) to use
React 19 instead of bundling their own React 18 copies.

This fixes the "invalid hook call" errors from having
multiple React instances in the test environment.

Also adds explicit @testing-library/dom and user-event
dependencies for React 19 compatibility.

* chore: Remove unused @testing-library/user-event

* fix: Pin node-pty to 1.0.0 for Node 24 compatibility

node-pty 1.1.0 has issues with posix_spawnp on Node 24.
Pin to exact version 1.0.0 which works correctly.

--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
     "clean": "rm -rf node_modules client/node_modules server/node_modules shared/node_modules client/dist server/dist"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
+    "concurrently": "^9.2.1",
     "knip": "^5.76.3",
     "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
   },
+  "overrides": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
+  },
   "dependencies": {
-    "node-pty": "^1.1.0"
+    "node-pty": "1.0.0"
   }
 }
