chore: Add test screenshot patterns to .gitignore
Prevent MCP workflow test screenshots from being accidentally committed

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,8 @@ backups/
 !server/data/.gitkeep
 client/playwright-report/
 test-results/
+
+# Test screenshots from MCP workflow testing
+ios-test-*.png
+yojimbo_mobile_*.png
+*_screenshot.png
