feat: Add configurable label for browser tab title
Adds optional `label` field to config.yaml that displays in browser tabs
to distinguish between multiple installations (e.g., DEV vs STABLE).

- Server config reads label from yaml or APP_LABEL env var
- Client fetches label and sets document.title with prefix
- Example: "[DEV] Yojimbo" or "[STABLE] Yojimbo"

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,4 +1,4 @@
-# CC Orchestrator Configuration
+# Yojimbo Configuration
 # Copy this file to config.yaml to customize settings
 # Environment variables override these values
 
@@ -10,3 +10,8 @@ serverPort: 3456
 
 # Client dev server port
 clientPort: 5173
+
+# Optional label to distinguish installations in browser tabs
+# Useful when running multiple instances (e.g., stable vs dev)
+# Examples: "DEV", "STABLE", "🔧 DEV", "⭐ STABLE"
+# label: DEV
