feat: Add status detection diagnostics and fix hook/polling race condition
Adds comprehensive diagnostic logging and fixes a race condition where
local file polling could override authoritative hook signals.

## Problem
When Claude fires a stop hook, local polling could immediately set status
back to 'working' if the session file was recently modified, causing
status oscillation.

## Solution
- Add hook priority service that tracks when stop/notification hooks are
  received
- Local polling now defers to recent hooks (10s grace period) instead of
  overriding them
- Add diagnostic logging that broadcasts status changes via WebSocket for
  real-time monitoring

## New Files
- `server/src/services/hook-priority.service.ts` - Tracks authoritative hooks
- `server/src/services/status-logger.service.ts` - Centralized status logging
- `client/e2e/specs/status-debug.spec.ts` - E2E tests for status detection
- `client/e2e/utils/status-analyzer.ts` - Utility for analyzing status logs

## Testing
Run `npm run test:e2e:status-debug` to execute status detection tests
that verify no conflicts between detection mechanisms.

--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "test:watch": "vitest",
     "test:e2e": "playwright test",
     "test:e2e:claude": "TEST_CLAUDE_INTEGRATION=1 playwright test --grep 'Claude Integration'",
+    "test:e2e:status-debug": "TEST_CLAUDE_INTEGRATION=1 playwright test --grep 'Status Debug'",
     "test:e2e:summary": "npx tsx e2e/coverage-summary.ts"
   },
   "dependencies": {
