--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "shared"
   ],
   "scripts": {
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "dev:client": "npm run dev --workspace=client",
-    "dev:server": "npm run dev --workspace=server",
+    "dev": "CI=true concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:client": "CI=true npm run dev --workspace=client",
+    "dev:server": "CI=true npm run dev --workspace=server",
     "build": "npm run build --workspace=shared && npm run build --workspace=client && npm run build --workspace=server",
     "start": "npm run start --workspace=server",
     "lint": "npm run lint --workspaces --if-present",
