feat: Add PM2 ecosystem config and Makefile commands
- Add ecosystem.config.js for PM2 process management
  - Production environment settings (PORT=3456)
  - Restart policies and graceful shutdown
  - Log file configuration
- Add PM2 commands to Makefile:
  - pm2-setup, pm2-start, pm2-stop, pm2-restart
  - pm2-reload (zero-downtime), pm2-logs, pm2-status
- Update deploy workflow to use ecosystem config
  - Zero-downtime reloads with pm2 reload
  - Automatic logs directory creation

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -58,11 +58,18 @@ jobs:
             npm run build
 
             echo ""
+            echo "📁 Creating logs directory..."
+            mkdir -p logs
+
+            echo ""
             echo "🔄 Restarting services..."
             if pm2 describe yojimbo > /dev/null 2>&1; then
-              pm2 restart yojimbo
+              # Zero-downtime reload using ecosystem config
+              pm2 reload ecosystem.config.js
             else
-              pm2 start npm --name yojimbo -- start
+              # First-time setup
+              pm2 start ecosystem.config.js
+              pm2 save
             fi
 
             echo ""
