--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "test:e2e": "npm run test:e2e --workspace=client",
     "db:migrate": "npm run db:migrate --workspace=server",
     "db:reset": "npm run db:reset --workspace=server",
-    "clean": "rm -rf node_modules client/node_modules server/node_modules shared/node_modules client/dist server/dist"
+    "clean": "rm -rf node_modules client/node_modules server/node_modules shared/node_modules client/dist server/dist",
+    "deploy:staging": "./scripts/deploy-to-staging.sh",
+    "deploy:production": "./scripts/deploy-to-production.sh"
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
