ci: Run CI checks on PRs to develop branch
Add develop to pull_request branches trigger so PRs targeting develop
also run the full CI pipeline.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
       - 'plans/**/*.md'
       - 'notes/**/*.md'
   pull_request:
-    branches: [main]
+    branches: [main, develop]
     paths-ignore:
       - 'README.md'
       - 'plans/**/*.md'
