feat: Inject version from release tag/commit SHA at build time
- Production builds display the release tag (e.g., v1.0.0)
- Staging builds display staging-<short-sha> (e.g., staging-abc1234)
- Version is injected via VITE_APP_VERSION environment variable
- Falls back to package.json version for local development

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -55,8 +55,8 @@ jobs:
             npm ci
 
             echo ""
-            echo "🔨 Building application..."
-            npm run build
+            echo "🔨 Building application with version ${RELEASE_TAG}..."
+            VITE_APP_VERSION=${RELEASE_TAG} npm run build
 
             echo ""
             echo "📁 Creating logs directory..."
