feat: Add Clone & Create Instance flow for Smart Tasks
Enables users to clone a GitHub repo and create an instance after Claude
identifies a repo during task clarification.

Backend:
- Add git-clone.service.ts with clone, path validation, URL parsing
- Extend smart-tasks routes with setup-project, validate-path endpoints
- Add WebSocket progress events for clone/create/register steps

Frontend:
- Add CloneSetupModal with path input, validation, progress indicators
- Extend ParsedTasksReview with GitHub repo detection and clone button
- Add github and download icons

Testing:
- Unit tests for git-clone.service (path expansion, URL parsing)
- Integration tests for setup-project API endpoint validation
- Optional Claude CLI integration test scaffold (requires API key)
- E2E test scaffold for clone modal UI

CI:
- Add optional claude-cli-tests job (manual trigger or [test-claude] commit)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,3 +111,27 @@ jobs:
           name: test-screenshots-${{ matrix.shard }}
           path: client/e2e/screenshots/
           retention-days: 7
+
+  # Optional Claude CLI integration tests
+  # Only runs when explicitly requested via workflow_dispatch
+  # or on nightly schedule (if configured)
+  claude-cli-tests:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    # Only run when manually triggered or on specific branches
+    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && contains(github.event.head_commit.message, '[test-claude]'))
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run build --workspace=shared
+      - name: Install Claude CLI
+        run: npm install -g @anthropic-ai/claude-code
+      - name: Run Claude CLI integration tests
+        run: npm run test:claude-cli
+        env:
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          ENABLE_CLAUDE_CLI_TESTS: 'true'
