feat: Add terminal drag-and-drop file support
- Add POST /api/filesystem/upload endpoint to save dropped files
- Add drag-drop handlers to Terminal.tsx with visual feedback
- Add getApiUrl() helper to client config
- Disable auto-deploy to staging on PR merge (can still trigger manually)

Files dropped onto terminal now upload to temp directory and paste
the escaped file path at cursor, matching native terminal behavior.

--- a/.github/workflows/deploy-stage.yml
+++ b/.github/workflows/deploy-stage.yml
@@ -1,8 +1,9 @@
 name: Deploy to Staging
 
 on:
-  push:
-    branches: [main]
+  # Temporarily disabled - uncomment to re-enable auto-deploy on PR merge
+  # push:
+  #   branches: [main]
   workflow_dispatch: # Allow manual trigger from GitHub UI
 
 jobs:
