ci: Install webkit browser for mobile-safari tests
The mobile-safari Playwright tests need webkit browser to be installed.
Updated CI workflow to install both chromium and webkit.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - name: Install Playwright browsers
-        run: npx playwright install chromium --with-deps
+        run: npx playwright install chromium webkit --with-deps
         working-directory: client
       - name: Run E2E tests (shard ${{ matrix.shard }}/3)
         run: npx playwright test --shard=${{ matrix.shard }}/3
