--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "generate-icons": "node scripts/generate-icons.mjs",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "test": "vitest run --config vitest.config.ts",
@@ -49,10 +50,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^27.4.0",
     "postcss": "^8.4.32",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.3.6",
     "tsx": "^4.21.0",
     "typescript": "^5.3.3",
     "vite": "^7.3.0",
+    "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.16",
     "ws": "^8.18.3",
     "yaml": "^2.8.2"
