--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "node-pty": "1.0.0",
     "ssh2": "^1.17.0",
     "uuid": "^13.0.0",
