--- a/client/package.json
+++ b/client/package.json
@@ -50,7 +50,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^27.4.0",
     "postcss": "^8.4.32",
-    "sharp": "^0.34.5",
     "tailwindcss": "^3.3.6",
     "tsx": "^4.21.0",
     "typescript": "^5.3.3",
@@ -59,5 +58,8 @@
     "vitest": "^4.0.16",
     "ws": "^8.18.3",
     "yaml": "^2.8.2"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.34.5"
   }
 }
